2009-08-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion--do-completion): Move point for the #b001
	case as well (bug#4176).
	(minibuffer-complete, minibuffer-complete-word): Don't move point.

2009-08-18  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-init-bus): Declare.  Apply it for the :system
	and :session buses.

2009-08-18  Kenichi Handa  <handa@m17n.org>

	* international/ucs-normalize.el (ucs-normalize-version):
	Change to 1.1.
	(ucs-normalize-hfs-nfd-pre-write-conversion): New function.
	(utf-8-hfs): Make it perform normalization on encoding too.

	* textmodes/paragraphs.el: Change to utf-8.  Adjust coding cookie.
	(sentence-end-without-space): Delete duplicated chars.
	(sentence-end-base): Likewise.

	* textmodes/sgml-mode.el: Change to utf-8.  Adjust coding cookie.
	(html-mode): Delete duplicated chars from sentence-end-base.

	* textmodes/texinfo.el: Change to utf-8.  Adjust coding cookie.
	(texinfo-mode): Delete duplicated chars from sentence-end-base.

2009-08-17  Chong Yidong  <cyd@stupidchicken.com>

	* files.el (hack-one-local-variable): If the mode function is for
	a minor mode, pass it an argument (Bug#4148).

2009-08-17  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-register-completion-file-name-handler):
	Check also for (member 'partial-completion completion-styles).

2009-08-16  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/cperl-mode.el (cperl-electric-paren): Don't expand
	abbrev (Bug#3943).

2007-10-08  Ilya Zakharevich  <ilyaz@cpan.org>

	* progmodes/cperl-mode.el: Merge upstream 6.2.
	(cperl-mode-syntax-table): Modify syntax entry for ["'`].
	(cperl-forward-re): Check cperl-brace-recursing.
	(cperl-highlight-charclass): New function.
	(cperl-find-pods-heres): Use it.
	(cperl-fill-paragraph): Synch to save-excursion placement used
	upstream.
	(cperl-beautify-regexp-piece): Fix column calculation.
	(cperl-make-regexp-x): Handle case where point is between "q" and
	"rs".